# HUST-Lab-Network

./: .gitignore  README.md
gui/: app.go  build.bat  go.mod  go.sum  main.go  wails.json
gui/frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.js
gui/frontend/src/: App.vue  main.js
network/ftp_root/: readme.md
network/http_root/: index.html
network/network/: network.topo
network/network/78FB927F-36EA-4730-A852-1E11B94AF91F/: flash.efz
network/network/EF56472C-1B73-435b-8696-E954577F5B46/: flash.efz
network/school/: school.topo
network/school/002AC686-CA99-4bd4-9A97-EEC8C014FB88/: PC.xml
network/school/03C86EDE-B2CE-42a2-8453-3AEA6E4F9AC4/: flash.efz
network/school/1A171840-5E10-47cf-923B-D9E2389C4BE4/: flash.efz
network/school/1D2D5824-34B5-49ca-9013-310EBBD0F689/: PC.xml
network/school/2E6250F6-7898-477a-89D6-4E9B3565F04F/: PC.xml
network/school/68F75F59-748F-439c-A9B0-A0B4BED42D4D/: flash.efz
network/school/8B0087FA-11BD-413f-896E-CAAAA80817C0/: flash.efz
network/school/920F8CD1-D1F9-471c-B89F-5F89E8382113/: flash.efz
network/school/A490805A-BD0B-4f0f-B628-63D4AFBB940A/: flash.efz
network/school/A9B8CFBD-A05E-4b73-BAED-BF4661890CC1/: flash.efz
network/school/B958B1EC-CE0C-441c-BAF9-4C9D5328ED3F/: flash.efz
network/school/CDAD211A-4A4E-421b-AFA5-14ADBEB75607/: flash.efz
network/school/E48D9469-EBFF-4e03-BBE9-01F96FCB48BA/: PC.xml
network/备忘/: CE-1.txt  IP划分.xlsx  网关路由器.txt
tftp_client/: CMakeLists.txt  library.c  library.h  log.c  log.h
tftp_client/test/: test.c
(+4 files in other folders)
